04_service.yml
apiVersion: v1
kind: Service
metadata: 
  name: kuber-basics-service
spec:
  selector: 
    app: kuber-basics
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
