05_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuber-basics-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "arch.homework"
      http:
        paths:
          - path : /
            pathType: Prefix
            backend:
              service:
                name: kuber-basics-service
                port:
                  number: 80
