06_ingress_rewrite.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuber-basics-ingress-rewrite
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /health
spec:
  ingressClassName: nginx
  rules:
    - host: "arch.homework"
      http:
        paths:
          - path : /otusapp
            pathType: Prefix
            backend:
              service:
                name: kuber-basics-service
                port:
                  number: 80
